[package]
name = "vastdisk-crypto"
version = "0.1.0"
edition = "2021"
description = "VASTDISK crypto core - AES-256-GCM, BLAKE3, Ed25519 verification. Optional WASM bindings."
license = "AGPL-3.0-or-later"
repository = "https://github.com/vastdisk/sdk-rust"
keywords = ["vastdisk", "encryption", "aes-256-gcm", "blake3", "ed25519"]
categories = ["cryptography", "wasm"]

[dependencies]
aes-gcm = "0.10"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "getrandom"]

[lib]
crate-type = ["lib", "cdylib"]
